Correct vertical alignment of FormControl validation icon (#668)
* manually set vertical alignment of FormControl validation icon

* changeset

* nudge FormControl.Validation success icon up slightly

* add FormControl.Validation stories

* github-actions[bot] Regenerated snapshots

---------

--- a/packages/react/src/forms/FormControl/FormControl.module.css
+++ b/packages/react/src/forms/FormControl/FormControl.module.css
@@ -92,8 +92,14 @@
   color: var(--brand-color-error-fg);
 }
 
-.FormControl-validation-icon {
-  padding-top: 1px;
+.FormControl-validation-success-icon {
+  position: relative;
+  top: -1.6px;
+}
+
+.FormControl-validation-error-icon {
+  position: relative;
+  top: -1px;
 }
 
 .FormControl-validation--animate-in {
